...
    <string name="title_activity_settings">Settings</string>
    <string name="editTxtUsername">Username</string>
    <string name="create_account_btn">Create Account</string>
    <string name="back_btn">Back</string>
    <string name="btnIngredientsList">Click here to view ingredients</string>
    <string name="shopping_list_header">Your shopping List:</string>
    <string name="shopping_list_menu">Shopping List</string>
    <string name="my_account_header">My Account</string>
    <string name="btn_update">Update</string>
    <string name="btn_edit">Edit</string>
    <string name="action_view_account">View Account</string>
    <string name="btn_delete_account">Delete Account</string>
    <string name="btn_main_menu">Main Menu</string>
...
