<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateAccount"
    android:orientation="vertical"
    android:background="@color/iconBackground">


    <ImageView
        android:id="@+id/createAccountPic"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:layout_weight="1"
        app:srcCompat="@drawable/logo_closeup"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/contentDiscription"
        />


    <EditText
        android:id="@+id/editTextUsername"
        android:layout_width="250dp"
        android:layout_height="20dp"
        android:layout_weight="1"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/editTxtUsername"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/iconDetails"
        android:textStyle="bold"
        android:textSize="18sp"/>

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="250dp"
        android:layout_height="20dp"
        android:layout_weight="1"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/txtboxPassword"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/iconDetails"
        android:textStyle="bold"
        android:textSize="18sp"
        android:layout_marginBottom="40dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:paddingBottom="20dp">

        <Button
            android:id="@+id/btnCreateUserAccount"
            android:layout_width="150dp"
            android:layout_height="45dp"
            android:text="@string/create_account_btn"
            android:layout_marginStart="50dp"
            android:layout_marginTop="0dp"
            android:layout_gravity="center_vertical"
            android:textColor="@color/iconDetails"
            android:textStyle="bold"
            android:background="@drawable/login_buttons" />

        <Button
            android:id="@+id/btnBack"
            android:layout_width="150dp"
            android:layout_height="45dp"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="2dp"
            android:text="@string/back_btn"
            android:textColor="@color/iconDetails"
            android:textStyle="bold"
            android:background="@drawable/login_button_2"/>

    </LinearLayout>

</LinearLayout>